--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
             "homepage": "https://www.linkedin.com/in/jsluchavez"
         }
     ],
-    "homepage": "https://github.com/luchmewep/simple-secrets",
+    "homepage": "https://github.com/luchavez-technologies/simple-secrets",
     "keywords": [
         "Laravel",
         "SimpleSecrets"
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "~8|~9",
+        "illuminate/support": "~8|~9|~10",
         "luchavez/starter-kit": "^1.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~6|~7"
+        "orchestra/testbench": "~6|~7|~8"
     },
     "suggest": {
         "luchavez/starter-kit": "^1.0",
