Update package description and readme
Updated the package description in 'composer.json' and 'readme.md' to include support for Laravel 8, 9, and 10. Also, added more relevant social and package statistics badges in 'readme.md' to provide more related information and interactivity for users.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "luchavez/simple-secrets",
-    "description": "Manage user secrets like passwords and PINs with expirations",
+    "description": "Manage user secrets like passwords and PINs with expirations for Laravel 8|9|10",
     "license": "MIT",
     "authors": [
         {
